cmake_minimum_required(VERSION 3.26)
project(advent_of_code_2023_c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(advent_of_code_2023_c__ main.cpp
        "Day01/Part1.cpp"
        "Day01/Part1.h"
        "Day01/Part1.cpp"
        "Day01/Day.cpp"
        "Day01/Day.h"
        "Day01/Part2.cpp"
        "Day01/Part2.h"
        "Solution.cpp"
        "Solution.h"
        "Day02/Day.cpp"
        "Day02/Day.h"
        "Day02/Game.cpp"
        "Day02/Game.h"
        "Day02/Part1.cpp"
        "Day02/Part1.h"
        Day02/Day.cpp
        Day02/Part2.cpp
        Day02/Part2.h
        Day03/Day.cpp
        Day03/Day.h
        Day03/Part1.cpp
        Day03/Part1.h
        Day03/Location.cpp
        Day03/Location.h
        Day03/NumberLocation.cpp
        Day03/NumberLocation.h
        Day03/Part2.cpp
        Day03/Part2.h
        Day04/Day.cpp
        Day04/Day.h
        Day04/Part1.cpp
        Day04/Part1.h
        Day04/ScratchCard.cpp
        Day04/ScratchCard.h
        Day04/Part2.cpp
        Day04/Part2.h
)
